--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns:  repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 20px;
     padding: 20px;
+    /* add fix size */
+
   }
   
   .grid-item {
@@ -23,7 +25,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
     overflow: hidden;
     width: 100%;
     height: 0;
