--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
   .grid-item img {
@@ -80,4 +83,12 @@
 .navbar-custom .navbar-brand,
 .navbar-custom .navbar-text {
   color: rgb(0, 0, 0);
+}
+
+
+.carousel-item img {
+  margin: auto;
+  height: 600px;
+  width: 600px;
+  object-fit: cover;
 }
