--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     grid-template-columns:  repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 20px;
     padding: 20px;
+    background-color: rgb(250,250,250);
     /* add fix size */
 
   }
@@ -59,7 +60,7 @@
   
   .text button {
     background-color: white;
-    color: black;
+    color: rgb(32,32,32);
     border: none;
     padding: 10px 20px;
     font-size: 16px;
@@ -67,22 +68,37 @@
     transition: all 0.3s ease 0s;
     cursor: pointer;
   }
+
+  .text-button {
+    background-color:rgb(82, 82, 82) !important;
+    color: white;
+    font-weight: bold;
+  }
+
+  .text-button:hover{
+    background-color: rgb(82, 82, 82);
+    color: white;
+  }
   
   .text button:hover {
-    background-color: rgb(142, 142, 142);
-    color: white;
+    background-color: rgb(82, 82, 82);
+    color: rgb(250, 250, 250);
   }
 
  /* Modify the background color */
          
  .navbar-custom {
-  background-color: rgb(19, 132, 213);
+  background-color: rgb(82, 82, 82);
 }
 /* Modify brand and text color */
 
 .navbar-custom .navbar-brand,
 .navbar-custom .navbar-text {
-  color: rgb(0, 0, 0);
+  color: rgb(250, 250, 250);
+  font-size: 32px;
+  font-weight: bold;
+  text-align: left;
+  /* margin: auto; */
 }
 
 
@@ -101,12 +117,31 @@
 }
 .carousel-item img {
   display: flex;
-  max-height: 500px;
+  height: 500px;
   max-width: 800px;
-  height: auto;
-  width: auto;
+  /* width: auto; */
   margin: auto;
-  object-fit: cover;
-  justify-content: center;
+  object-fit: fill;
+  /* justify-content: center; */
   align-items: center;
+}
+
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  background-image: none !important;
+}
+
+.carousel-control-next-icon:after{
+  content: '>';
+  font-size: 55px;
+  color: rgb(8,8,8);
+}
+
+.carousel-control-prev-icon:after{
+  content: '<';
+  font-size: 55px;
+  color: rgb(8,8,8);
 }
